30.12.2010:
        *Feature: Appearance part color names now can now be edited. (Tim)
          TODO: Add per-song settings and add toolbar with some colour goodies.
        *Feature: Mixer label colours can now be edited in the appearance settings. (Tim)
          TODO: Remix track icons using use alpha channel and special routine to mix in 
           these settable colours.
        *Fixed: Appearance settings palette was broken. (Tim)
          Note: A few odd Qt styles are wacky (Motif, Windows). Your mileage may vary.
29.12.2010:
        - Fixed Bigtime display when using a style sheet for MusE. (Tim)
          Set window font using a style sheet. Bigtime used QFont::setPixelSize(). 
          Application style sheets (even a blank one) override with the fixed application 
          font size (evidenced by adjusting MusE config font#0, then bigtime font size changed). 
          TODO: Darn, the tooltips fonts are as big as the labels! Must fix.
        - Added 2 wallpapers from Geoff Beasly.
        - Fixed focus stealing of transport (rj)
28.12.2010:
        - Tweaked and added some delays during project load to counter threading
          issues during loading of projects (rj)
        - Commented out the comment placeholder text line in projectcreateimpl.cpp. It
          broke the compilation against Qt-4.7. (Orcan)
        - Fixed the shift modifier issue in renaming parts in the arranger. (Orcan)
        - Fixed the 'no selected track' trackinfo background MusE logo display. (Tim)
          It was a memory leak as well. Was a simple fix in Arranger::genTrackInfo().
27.12.2010:
        - Added a first try at project creation dialog, we'll see how much territory
          it covers, intentionally it's only used upon creation of a project, later 'Save As'
          operations use the old dialog so multiple .med files can be saved for the
          same project (rj)
        - deferred creating *.wav files until the global record button is clicked,